--- a/apps/web/src/pages/ui-demo.astro
+++ b/apps/web/src/pages/ui-demo.astro
@@ -243,7 +243,7 @@ import {
       </div>
 
       <div
-        class="*:data-[slot=avatar]:ring-background flex -space-x-2 *:data-[slot=avatar]:ring-2 *:data-[slot=avatar]:grayscale items-center"
+        class="*:data-[slot=avatar]:ring-background flex -space-x-2 *:data-[slot=avatar]:ring-2 items-center"
       >
         <Avatar>
           <AvatarImage>
