--- a/packages/ui/src/components/card/Card.astro
+++ b/packages/ui/src/components/card/Card.astro
@@ -13,10 +13,10 @@
  *   </CardMedia>
  *   <CardHeader>
  *     <div class="flex items-center gap-2 justify-between">
- *       <div class="*:data-[slot=avatar]:ring-background flex -space-x-2 *:data-[slot=avatar]:ring-2 *:data-[slot=avatar]:grayscale">
+ *       <div class="*:data-[slot=avatar]:ring-background flex -space-x-2 *:data-[slot=avatar]:ring-2">
  *         <Avatar>
  *           <AvatarImage>
- *             <img src="https://github.com/withastro.png" alt="@withastro" />
+ *             <img src="https://gradient.bejamas.com/api/gradient.png?funkiness=90&contrast=0&w=80&h=80&seed=bejamas" alt="grdient avatar" />
  *           </AvatarImage>
  *           <AvatarFallback>AW</AvatarFallback>
  *         </Avatar>
