chore: change avatar seed

--- a/packages/ui/src/components/card/Card.astro
+++ b/packages/ui/src/components/card/Card.astro
@@ -16,7 +16,7 @@
  *       <div class="*:data-[slot=avatar]:ring-background flex -space-x-2 *:data-[slot=avatar]:ring-2">
  *         <Avatar>
  *           <AvatarImage>
- *             <img src="https://gradient.bejamas.com/api/gradient.png?funkiness=90&contrast=0&w=80&h=80&seed=bejamas" alt="grdient avatar" />
+ *             <img src="https://gradient.bejamas.com/api/gradient.png?funkiness=90&contrast=0&w=80&h=80&seed=bejamas-avatar" alt="grdient avatar" />
  *           </AvatarImage>
  *           <AvatarFallback>AW</AvatarFallback>
  *         </Avatar>
