feat(ui): add asChild prop support

--- a/packages/ui/src/components/dialog/Dialog.astro
+++ b/packages/ui/src/components/dialog/Dialog.astro
@@ -8,7 +8,9 @@
  * @preview
  *
  * <Dialog>
- *   <Button data-slot="dialog-trigger">Manage Cookies</Button>
+ *   <DialogTrigger asChild>
+ *     <Button>Manage Cookies</Button>
+ *   </DialogTrigger>
  *
  *   <DialogContent class="sm:max-w-lg">
  *     <DialogHeader>
