feat: add toggle

--- a/apps/web/src/components/PageTitle.astro
+++ b/apps/web/src/components/PageTitle.astro
@@ -31,6 +31,8 @@ import {
   SliderRange,
   SliderThumb,
 } from "@bejamas/ui/components/slider";
+import { Toggle } from "@bejamas/ui/components/toggle";
+
 import {
   ArrowRight,
   ArrowLeft,
@@ -270,6 +272,7 @@ const options = [...filteredDefaultOptions, ...customOptions];
     </SliderTrack>
     <SliderThumb />
   </Slider>
+  <Toggle />
 </div>
 
 <style>
