--- a/packages/ui/src/components/input-group/InputGroupAddon.astro
+++ b/packages/ui/src/components/input-group/InputGroupAddon.astro
@@ -6,31 +6,29 @@ import { cn } from "@bejamas/ui/lib/utils";
 type Align = "inline-start" | "inline-end" | "block-start" | "block-end";
 
 type Props = {
-  as?: HTMLTag;
   align?: Align;
   class?: string;
 } & HTMLAttributes<"div">;
 
 const {
-  as: Tag = "div",
   align = "inline-start",
   class: className = "",
   ...rest
 } = Astro.props as Props;
 
 const addonVariants = cva(
-  "text-muted-foreground flex h-auto cursor-text items-center justify-center gap-2 py-1.5 text-sm font-medium select-none [&>svg:not([class*='size-'])]:size-4 [&>kbd]:rounded-[calc(var(--radius)-5px)] group-data-[disabled=true]/input-group:opacity-50",
+  "text-muted-foreground h-auto gap-2 py-1.5 text-sm font-medium group-data-[disabled=true]/input-group:opacity-50 [&>kbd]:rounded-[calc(var(--radius)-5px)] [&>svg:not([class*='size-'])]:size-4 flex cursor-text items-center justify-center select-none",
   {
     variants: {
       align: {
         "inline-start":
-          "order-first pl-3 has-[>button]:ml-[-0.45rem] has-[>kbd]:ml-[-0.35rem]",
+          "pl-2 has-[>button]:ml-[-0.3rem] has-[>kbd]:ml-[-0.15rem] order-first",
         "inline-end":
-          "order-last pr-3 has-[>button]:mr-[-0.45rem] has-[>kbd]:mr-[-0.35rem]",
+          "pr-2 has-[>button]:mr-[-0.3rem] has-[>kbd]:mr-[-0.15rem] order-last",
         "block-start":
-          "order-first w-full justify-start px-3 pt-3 [.border-b]:pb-3 group-has-[>input]/input-group:pt-2.5",
+          "px-2.5 pt-2 group-has-[>input]/input-group:pt-2 [.border-b]:pb-2 order-first w-full justify-start",
         "block-end":
-          "order-last w-full justify-start px-3 pb-3 [.border-t]:pt-3 group-has-[>input]/input-group:pb-2.5",
+          "px-2.5 pb-2 group-has-[>input]/input-group:pb-2 [.border-t]:pt-2 order-last w-full justify-start",
       },
     },
     defaultVariants: {
@@ -40,7 +38,7 @@ const addonVariants = cva(
 );
 ---
 
-<Tag
+<div
   {...rest}
   role="group"
   data-slot="input-group-addon"
@@ -48,5 +46,4 @@ const addonVariants = cva(
   class={cn(addonVariants({ align }), className)}
 >
   <slot />
-</Tag>
-
+</div>
